--- a/NZWalks.WEB/Views/Regions/Index.cshtml
+++ b/NZWalks.WEB/Views/Regions/Index.cshtml
@@ -14,6 +14,7 @@
             <th>Id</th>
             <th>Code</th>
             <th>Name</th>
+            <th> </th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +24,9 @@
                 <td>@region.Id</td>
                 <td>@region.Code</td>
                 <td>@region.Name</td>
+                <td>
+                    <a asp-controller="Regions" asp-action="Edit" asp-route-id="@region.Id" class="btn btn-light">Edit</a>
+                </td>
             </tr>
         }
     </tbody>
